# intelli

./: .gitignore  CMakeLists.txt  README.md
executable/: main.cpp
include/intelli/: display.h  mapper.h
parts/: baseplate.3mf  canport.3mf  top.3mf
service/: can.service
source/: CMakeLists.txt
source/executable/: main.cpp
source/include/intelli/: display.h  mapper.h
source/src/: display.cpp  mapper.cpp
src/: display.cpp  mapper.cpp
